--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,6 +5,14 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face{ 
+	font-family: 'Poiret One', cursive;
+	src: url('WebFont.eot');
+	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
+	    url('WebFont.woff') format('woff'),
+	    url('WebFont.ttf') format('truetype'),
+	    url('WebFont.svg#webfont') format('svg');
+}
 
 .ite-long {
     width: auto;
@@ -37,6 +45,9 @@ h1, h2, h3, h4, h5, h6{
     text-shadow: 0 0 10px #fff, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 60px #ff0000, 0 0 70px #ff0000;
 }
 
+/******************************************************************************************************
+************************************** JUMBO TRON  ****************************************************
+******************************************************************************************************/
 .headers {
     font-size: 2.5rem;
     text-align: right;
@@ -48,11 +59,15 @@ h1, h2, h3, h4, h5, h6{
     text-shadow: 0px 0px 25px rgb(255, 0, 0);
 }
 
+/******************************************************************************************************
+************************************** INDEX GRID *****************************************************
+******************************************************************************************************/
+
 .grid-container {
     padding-top: 5rem;
     padding-bottom: 5rem;
     display: grid;
-    grid-gap: 0px;
+    grid-gap: 10px;
     margin-left: 0px;
     align-items: center;
     justify-items: center;
@@ -87,7 +102,7 @@ h1, h2, h3, h4, h5, h6{
 *************************************************************************************************/
 
 .row > .column {
-padding: 0px 0px;
+padding: 10px 10px;
 }
 
 .row:after {
@@ -99,7 +114,7 @@ clear: both;
 /* Create four equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33%;
+    width: 18%;
 }
 
 /* The Modal (background) */
@@ -153,13 +168,13 @@ clear: both;
     .next {
     cursor: pointer;
     position: absolute;
-    top: 30%;
+    top: 50%;
     width: auto;
     padding: 16px;
     margin-top: -50px;
     color: white;
     font-weight: bold;
-    font-size: 45px;
+    font-size: 25px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -167,7 +182,7 @@ clear: both;
 }
 
 /* Position the "next button" to the right */
-    .next {
+.next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
@@ -179,7 +194,7 @@ clear: both;
 }
 
 /* Number text (1/3 etc) */
-    .numbertext {
+.numbertext {
     color: #f2f2f2;
     font-size: 25px;
     padding: 8px 12px;
@@ -188,7 +203,7 @@ clear: both;
 }
 
 /* Caption text */
-    .caption-container {
+.caption-container {
     text-align: center;
     background-color: black;
     padding: 2px 16px;
@@ -211,3 +226,65 @@ img.hover-shadow {
 .hover-shadow:hover {
     transform: scale(1.01);
 }
+
+/************************************************************************************************
+**************************************CONTACT FORM***********************************************
+*************************************************************************************************/
+
+
+#contact{
+    font-size: 2.5rem;
+    text-align: right;
+    padding-top: 30vh;
+    padding-right: 1.5rem;
+    line-height: 7rem;
+    color: rgb(255, 255, 255);
+    font-family: 'neoneonregular';
+    text-shadow: 0px 0px 25px rgb(255, 0, 0);
+}
+.section-content{
+    text-align: center; 
+    padding-top: 40px;
+}
+
+.contact-section{
+    padding-top: 3rem;
+}
+.contact-section .col-md-6{
+    width: 50%;
+}
+
+.form-line{
+    border-right: 1px solid #B29999;
+}
+
+.form-group{
+    margin-top: 10px;
+}
+label{
+    font-size: 1.5em;
+    line-height: 1em;
+    font-weight: normal;
+}
+.form-control{
+    font-size: 1.5em;
+    color: #121212;
+}
+textarea.form-control {
+    height: 135px;
+    /* margin-top: px;*/
+}
+
+.submit{
+    font-size: 1.5em;
+    float: right;
+    width: 150px;
+    background-color: transparent;
+    color: #121212;
+
+}
+
+
+
+
+
