--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ img.hover-shadow {
   line-height: 7rem;
   color: white;
   font-family: 'neoneonregular';
+  font-weight: bold;
   text-shadow: 0px 0px 25px red;
 }
 
