--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ h3 {
   margin-right: 0px;
   -ms-grid-columns: (minmax(250px, 2fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
+  font-family: 'Poiret One', cursive;
 }
 
 .footer {
