--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ img {
   background-size: cover;
   -webkit-box-shadow: 0px 5px 9px rgba(0, 0, 0, 0.6);
           box-shadow: 0px 5px 9px rgba(0, 0, 0, 0.6);
+  font-family: italic;
 }
 
 h1 {
